fix footer on small mobile

--- a/app/components/Footer/footer.module.css
+++ b/app/components/Footer/footer.module.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 40px 50px;
+    padding: 40px 20px;
     width: 100%;
 }
 
